# nightkite-configurator

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-installer.yml
docs/: manual_de.md  manual_en.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  serial_bridge.rs
src/features/calibration/: CalibrationPanel.tsx
src/features/config/: ConfigPanel.tsx
src/features/connection/: ConnectionPanel.tsx
src/features/diagnostics/: DiagnosticsPanel.tsx
src/features/manual/: ManualPanel.tsx
src/features/options/: OptionsPanel.tsx
src/features/patterns/: PatternsPanel.tsx
src/lib/: cli.ts  deviceClient.ts  types.ts
