[package]
name = "nightkite-configurator"
version = "0.1.0"
description = "Desktop configuration tool for the NightKite Multi controller"
authors = ["administrator"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
