[package]
name = "nightkite-configurator"
version = "1.0.0"
description = "Desktop configuration tool for the NightKite Multi controller"
authors = ["administrator"]
edition = "2021"
default-run = "nightkite-configurator"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8.1"
tauri = { version = "2.5.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
